# techtraningcamp-red-envelope

./: .dockerignore  .gitignore  Cargo.toml  README.md  batchMessage.txt  dockerfile
asdasd/: config
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/kafka/: mod.rs
src/model/: mod.rs
src/server/: mod.rs
src/utils/: mod.rs
tests/: batchMessage.txt  kafka_sent_test.sh
