[package]
name = "techtraningcamp-red-envelope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
rbatis = { version = "3.0", default-features = false, features = ["mysql","runtime-async-std-rustls"] }
serde = { version = "1", features = ["derive"] }
bson = "2.0.1"
log = "0.4"
lazy_static = "1.4"
fast_log="1.3"
rdkafka = { version = "0.27", features = ["cmake-build"] }
futures = "0.3.17"
serde_json = "1.0"